--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "express": "~4.16.0",
     "express-session": "^1.15.6",
     "hbs": "~4.0.1",
+    "express-handlebars": "~3.0.0",
     "http-errors": "~1.6.2",
     "morgan": "~1.9.0",
     "mysql2": "^1.5.3",
